# yolo_and_ai_for_recover

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  README.md  api.py  app.py  deploy.sh  docker-compose.yml  init-db.sql  pyproject.toml  seed_data.py
docker/ai-evaluator/: Dockerfile  main.py
docker/compare-service/: Dockerfile  main.py
docker/video-capture/: Dockerfile  main.py
docker/web-app/: Dockerfile  main.py
docker/yolo-inference/: Dockerfile  main.py
src/rehab_pose/: __init__.py  ai_evaluator.py  config.py  database.py  kafka_utils.py  keypoints.py  pose_comparator.py  pose_detector.py  rag_knowledge_base.py  rehab_logger.py  visualization.py
