[project]
name = "rehab-pose-assessment"
version = "1.0.0"
description = "基于YOLO与AI大模型的康复训练姿态评估系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.0",
    "faiss-cpu>=1.7.4",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.6.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "confluent-kafka>=2.3.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
